--- a/Q-TV-RNN/main copy.ipynb
+++ b/Q-TV-RNN/main copy.ipynb
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "861b98f4",
    "metadata": {},
    "outputs": [],
@@ -74,8 +74,7 @@
     "        print('beta',self.beta)\n",
     "\n",
     "    def call(self, inputs):\n",
-    "        print('beta', self.beta,'input',input)\n",
-    "        return K.softsign(inputs) * self.beta\n",
+    "        return inputs * K.sigmoid(self.beta * inputs)  # a change\n",
     "\n",
     "    def get_config(self):\n",
     "        config = {'beta': float(self.beta)}\n",
@@ -196,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "e22d67ac",
    "metadata": {},
    "outputs": [
@@ -288,17 +287,17 @@
    "source": [
     "# fix random seed for reproducibility\n",
     "numpy.random.seed(7)\n",
+    "\n",
+    "\n",
     "# load the dataset\n",
     "dataframe = read_csv('Q-data/speed_t4013_train.csv', usecols=[2], engine='python')\n",
     "dataset = dataframe.values\n",
+    "\n",
     "stationary=verify_stationarity(dataset)\n",
-    "#dataframe=dataframe.diff(axis = 0, periods = 1)\n",
-    "#dataset = dataframe.dropna().values\n",
+    "\n",
     "dataset = dataset.astype('float32')\n",
+    "\n",
     "# normalize the dataset\n",
-    "print('dataset', dataset)\n",
-    "#dataset=dataset.dropna()\n",
-    "stationary = verify_stationarity(dataset)\n",
     "scaler = MinMaxScaler(feature_range=(0, 1))\n",
     "\n",
     "dataset = scaler.fit_transform(dataset)\n",
@@ -308,6 +307,7 @@
     "test_size = len(dataset) - train_size\n",
     "train, test = dataset[0:train_size, :], dataset[train_size:len(dataset), :]\n",
     "std=numpy.std(train)\n",
+    "\n",
     "# reshape into X=t and Y=t+1\n",
     "look_back = period_size\n",
     "tw = step_size\n",
@@ -445,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "37c4d990",
    "metadata": {},
    "outputs": [
@@ -796,7 +796,6 @@
     "modelq50_1.add(SimpleRNN(4, input_shape=(multi, 1)) )\n",
     "modelq50_1.add(Dense(1))\n",
     "modelq50_1.add(Swish(beta=1.5))\n",
-    "modelq50_1.add(Activation(Swish(beta=1.5)))\n",
     "modelq50_1.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq50_1.fit(trainX_parts[0], trainY_parts[0], epochs=50, batch_size=1, verbose=2)\n",
     "\n",
@@ -804,7 +803,6 @@
     "modelq10_1.add(SimpleRNN(4, input_shape=(multi, 1)))\n",
     "modelq10_1.add(Dense(1))\n",
     "modelq10_1.add(Swish(beta=1.5))\n",
-    "modelq10_1.add(Activation(Swish(beta=1.5)))\n",
     "modelq10_1.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq10_1.fit(trainXL_parts[0], trainYL_parts[0], epochs=50, batch_size=1, verbose=2)\n",
     "\n",
@@ -812,14 +810,13 @@
     "modelq90_1.add(SimpleRNN(4, input_shape=(multi, 1)))\n",
     "modelq90_1.add(Dense(1))\n",
     "modelq90_1.add(Swish(beta=1.5))\n",
-    "modelq90_1.add(Activation(Swish(beta=1.5)))\n",
     "modelq90_1.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq90_1.fit(trainXU_parts[0], trainYU_parts[0], epochs=50, batch_size=1, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "71506b26",
    "metadata": {},
    "outputs": [
@@ -1170,7 +1167,6 @@
     "modelq50_2.add(SimpleRNN(4, input_shape=(multi, 1)) )\n",
     "modelq50_2.add(Dense(1))\n",
     "modelq50_2.add(Swish(beta=1.5))\n",
-    "modelq50_2.add(Activation(Swish(beta=1.5)))\n",
     "modelq50_2.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq50_2.fit(trainX_parts[1], trainY_parts[1], epochs=50, batch_size=1, verbose=2)\n",
     "\n",
@@ -1178,7 +1174,6 @@
     "modelq10_2.add(SimpleRNN(4, input_shape=(multi, 1)))\n",
     "modelq10_2.add(Dense(1))\n",
     "modelq10_2.add(Swish(beta=1.5))\n",
-    "modelq10_2.add(Activation(Swish(beta=1.5)))\n",
     "modelq10_2.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq10_2.fit(trainXL_parts[1], trainYL_parts[1], epochs=50, batch_size=1, verbose=2)\n",
     "\n",
@@ -1186,14 +1181,13 @@
     "modelq90_2.add(SimpleRNN(4, input_shape=(multi, 1)))\n",
     "modelq90_2.add(Dense(1))\n",
     "modelq90_2.add(Swish(beta=1.5))\n",
-    "modelq90_2.add(Activation(Swish(beta=1.5)))\n",
     "modelq90_2.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq90_2.fit(trainXU_parts[1], trainYU_parts[1], epochs=50, batch_size=1, verbose=2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "a3e4a359",
    "metadata": {},
    "outputs": [
@@ -1544,7 +1538,6 @@
     "modelq50_3.add(SimpleRNN(4, input_shape=(multi, 1)) )\n",
     "modelq50_3.add(Dense(1))\n",
     "modelq50_3.add(Swish(beta=1.5))\n",
-    "modelq50_3.add(Activation(Swish(beta=1.5)))\n",
     "modelq50_3.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq50_3.fit(trainX_parts[2], trainY_parts[2], epochs=50, batch_size=1, verbose=2)\n",
     "\n",
@@ -1552,7 +1545,6 @@
     "modelq10_3.add(SimpleRNN(4, input_shape=(multi, 1)))\n",
     "modelq10_3.add(Dense(1))\n",
     "modelq10_3.add(Swish(beta=1.5))\n",
-    "modelq10_3.add(Activation(Swish(beta=1.5)))\n",
     "modelq10_3.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq10_3.fit(trainXL_parts[2], trainYL_parts[2], epochs=50, batch_size=1, verbose=2)\n",
     "\n",
@@ -1560,7 +1552,6 @@
     "modelq90_3.add(SimpleRNN(4, input_shape=(multi, 1)))\n",
     "modelq90_3.add(Dense(1))\n",
     "modelq90_3.add(Swish(beta=1.5))\n",
-    "modelq90_3.add(Activation(Swish(beta=1.5)))\n",
     "modelq90_3.compile(loss=losses.logcosh, optimizer='adam')\n",
     "modelq90_3.fit(trainXU_parts[2], trainYU_parts[2], epochs=50, batch_size=1, verbose=2)"
    ]
